# src/controllers/interfaces/news.interface.ts
@@ -1,5 +1,10 @@
 import { NewsResponse } from '../../utils/Responses';
 
 export interface INewsController {
-  getNews(category?: string, search?: string): Promise<NewsResponse>;
+  getNews(
+    documentsPerPage?: number,
+    currentPage?: number,
+    category?: string,
+    search?: string
+  ): Promise<NewsResponse>;
 }
